# src/swagger/v1.yaml
@@ -169,9 +169,9 @@ paths:
           description: "Não autorizado"
         "404":
           description: "Não encontrado"
-  /empresa/{empresa_id}/funcionario:
+  /empresa/{empresa_id}/operador:
     options:
-      x-swagger-router-controller: controller.funcionario
+      x-swagger-router-controller: controller.operador
       operationId: options
       produces:
         - "application/json"
@@ -186,7 +186,7 @@ paths:
         200:
           description: Default response for CORS method
     get:
-      x-swagger-router-controller: controller.funcionario
+      x-swagger-router-controller: controller.operador
       operationId: search
       produces:
         - "application/json"
@@ -205,13 +205,13 @@ paths:
           schema:
             type: "array"
             items:
-              $ref: "#/definitions/funcionario"
+              $ref: "#/definitions/operador"
         "401":
           description: "Não autorizado"
         "404":
           description: "Não encontrado"
     post:
-      x-swagger-router-controller: controller.funcionario
+      x-swagger-router-controller: controller.operador
       operationId: post
       consumes:
         - "application/json"
@@ -222,20 +222,20 @@ paths:
           name: "body"
           required: true
           schema:
-            $ref: '#/definitions/funcionario'
+            $ref: '#/definitions/operador'
       responses:
         "201":
           description: "Criado"
           schema:
-            $ref: '#/definitions/funcionario'
+            $ref: '#/definitions/operador'
         "400":
           description: "Request Inválida"
         "401":
           description: "Não autorizado"
 
-  /empresa/{empresa_id}/funcionario/{funcionario_id}:
+  /empresa/{empresa_id}/operador/{operador_id}:
     options:
-      x-swagger-router-controller: controller.funcionario
+      x-swagger-router-controller: controller.operador
       operationId: options_id
       produces:
         - "application/json"
@@ -245,7 +245,7 @@ paths:
           required: true
           type: "string"
         - in: "path"
-          name: "funcionario_id"
+          name: "operador_id"
           required: true
           type: "string"
       summary: CORS suporte
@@ -254,7 +254,7 @@ paths:
         200:
           description: Metodo generico para CORS
     get:
-      x-swagger-router-controller: controller.funcionario
+      x-swagger-router-controller: controller.operador
       operationId: get
       produces:
         - "application/json"
@@ -264,20 +264,20 @@ paths:
           required: true
           type: "string"
         - in: "path"
-          name: "funcionario_id"
+          name: "operador_id"
           required: true
           type: "string"
       responses:
         "200":
           description: "OK"
           schema:
-            $ref: "#/definitions/funcionario"
+            $ref: "#/definitions/operador"
         "401":
           description: "Não autorizado"
         "404":
           description: "Não encontrado"
     put:
-      x-swagger-router-controller: controller.funcionario
+      x-swagger-router-controller: controller.operador
       operationId: put
       consumes:
         - "application/json"
@@ -289,19 +289,19 @@ paths:
           required: true
           type: "string"
         - in: "path"
-          name: "funcionario_id"
+          name: "operador_id"
           required: true
           type: "string"
         - in: "body"
           name: "body"
           required: true
           schema:
-            $ref: "#/definitions/funcionario"
+            $ref: "#/definitions/operador"
       responses:
         "200":
           description: "OK"
           schema:
-            $ref: "#/definitions/funcionario"
+            $ref: "#/definitions/operador"
         "400":
           description: "Dados Inválidos"
         "401":
@@ -309,7 +309,7 @@ paths:
         "404":
           description: "Não encontrado"
     delete:
-      x-swagger-router-controller: controller.funcionario
+      x-swagger-router-controller: controller.operador
       operationId: delete
       produces:
         - "application/json"
@@ -319,7 +319,7 @@ paths:
           required: true
           type: "string"
         - in: "path"
-          name: "funcionario_id"
+          name: "operador_id"
           required: true
           type: "string"
       responses:
@@ -526,7 +526,7 @@ definitions:
         type: "boolean"
       senha:
         type: "string"
-  funcionario:
+  operador:
     type: "object"
     properties:
       id:
